2009-01-18 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.conf.beginner: fix some plugin of header and footer.

2009-01-15 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* add "mixi-mobile-converter" to mobile user agent.

2009-01-08 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* deleted encoding parameter in File::open.

2009-01-07 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: added to_native for cookie name.

2009-01-07 TADA Tadashi <t@tdtds.jp>
	* tdiary.rb: supported secure mode in load_cgi_conf, but dose not works on secure mode...

2009-01-04 TADA Tadashi <t@tdtds.jp>
	* supported ruby 1.9.1 more, but it dose not work well.

2008-12-16 TADA Tadashi <t@tdtds.jp>
	* index.rb, update.rb: String#size -> String#bytesize.
	* plugin/ja/05referer.rb: escaped backslash more.

2008-12-07 TADA Tadashi <t@tdtds.jp>
	* tdiary/filter/default.rb, tdiary/defaultio.rb, tdiary.rb,
	plugin/00default.rb: added encoding to File::open's parameter. But it
	dosen't work yet.

2008-12-07 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/lib/compatible.rb: add compatible.rb

2008-12-07 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* **/*.rb: insert magic comment.

2008-11-17 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* index.rb, update.rb: replaced $defout to $stdout. ($defout is obsolete in ruby1.8) 

2008-10-31 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: escaped comment_form_text. thx fudan.

2008-10-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/90migrate.rb: fixed error when a.dat is not exist.

2008-10-25 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.beginner: 'update.cgi' -> 'update.rb'

2008-10-19 TADA Tadashi <sho@spc.gr.jp>
	* release 2.3.1.

2008-10-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/90migrate.rb: supported a.dat (a.rb plugin's dictionary).

2008-09-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fixed #119: Insecure error in CGI::https? when runnning on
	secure mode.

2008-08-18 TADA Tadashi <sho@spc.gr.jp>